# ChangeLog for x11-libs/qt-test
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.9 2008/05/27 13:11:47 armin76 Exp $

  27 May 2008; Raúl Porcel <armin76@gentoo.org> qt-test-4.4.0.ebuild:
  Add ~alpha/~ia64/~sparc wrt #223557

  26 May 2008; Jeroen Roovers <jer@gentoo.org> qt-test-4.4.0.ebuild:
  Marked ~hppa (bug #223557).

  25 May 2008; Markus Rothe <corsair@gentoo.org> qt-test-4.4.0.ebuild:
  Added ~ppc/~ppc64

  16 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-test-4.4.0_rc1.ebuild:
  Old.

*qt-test-4.4.0 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +qt-test-4.4.0.ebuild:
  Version bump to Qt-4.4.0.

  10 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-test-4.4.0_beta1.ebuild, +qt-test-4.4.0_rc1.ebuild:
  Version bump qt-test to 4.4.0_rc1. Thanks to Bo Andresen and Bernd
  Steinhauser.

  05 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-test-4.4.0_rc1.ebuild:
  Old.

*qt-test-4.4.0_beta1 (05 Mar 2008)

  05 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +qt-test-4.4.0_beta1.ebuild:
  Added Qt-4.4.0_beta, note that the RC1 is an accidentally mislabelled
  `technical preview`, so this will appear as a downgrade if you installed
  that version.

*qt-test-4.4.0_rc1 (21 Dec 2007)

  21 Dec 2007; Caleb Tennis <caleb@gentoo.org> +metadata.xml,
  +qt-test-4.4.0_rc1.ebuild:
  Initial ebuild
