@@ -1,9 +1,8 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/qt-test-4.4.0.ebuild,v 1.4 2008/05/27 13:11:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/qt-test-4.4.0.ebuild,v 1.5 2008/06/13 23:25:39 ingmar Exp $
 
-EAPI="prefix"
-
+EAPI="prefix 1"
 inherit qt4-build
 
 DESCRIPTION="The testing framework module for the Qt toolkit."
@@ -14,7 +13,8 @@ SLOT="4"
 KEYWORDS="~amd64-linux ~x86-linux"
 IUSE=""
 
-DEPEND="~x11-libs/qt-core-${PV}"
+DEPEND="~x11-libs/qt-core-${PV}
+	!<=x11-libs/qt-4.4.0_alpha:${SLOT}"
 RDEPEND="${DEPEND}"
 
 QT4_TARGET_DIRECTORIES="src/testlib"
