@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-test
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.9 2008/05/27 13:11:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.10 2008/06/13 23:25:39 ingmar Exp $
+
+  13 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org> qt-test-4.4.0.ebuild:
+  Make all split Qt4 ebuilds block the old monolithic ebuild.
 
   27 May 2008; Raúl Porcel <armin76@gentoo.org> qt-test-4.4.0.ebuild:
   Add ~alpha/~ia64/~sparc wrt #223557
